--- a/tomonotomo/templates/tomonotomo/about.html
+++ b/tomonotomo/templates/tomonotomo/about.html
@@ -25,7 +25,13 @@
 				<li>Since, explicity or implicitly, there is always a common friend involved, the system ensures more safety, trust and friendliness</li>
 			</ul>
 			<br/>
-
+			How is "Tomonotomo" adding value?<br/><br/>
+			<ul class="list">
+                                <li>Relying on party serendipity is so 1990s. We are taking serendipity to the online world. Discovery happens over tomonotomo.</li>
+				<li>Safe, secure and honourable platform to meet more people</li>
+				<li>Not another dating account - We get the friend information from facebook and build our database to help you, you discover on tomonotomo and then all further communication happens on email or phone or in person.</li>
+                        </ul>
+			<br/>
 			Do let us know if we helped you start your relationship. :)
 
 		</div>
