--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -197,7 +197,7 @@
                 <div id="lean_overlay-body">
                         {% if mutualfriends %}
                             {% for mutualfriend in mutualfriends %}
-                                <a href="/tntAction/{{ fbid }}/1/{{ mutualfriend.id }}"><div class="reqfriend"><img class="reqfriend" src="{% static 'tomonotomo/img/facebook-blank.png' %}"><h4>{{ mutualfriend.name }}</h4></div></a>
+                                <a href="/tntAction/{{ fbid }}/1/{{ mutualfriend.id }}"><div class="reqfriend"><img class="reqfriend" src="http://graph.facebook.com/{{ mutualfriend.id }}/picture?type=square"><h4>{{ mutualfriend.name }}</h4></div></a>
                             {% endfor %}
                         {% endif %}
                 </div>
@@ -211,26 +211,26 @@
 $(window).load(function(){
 	{% if notify_invite_friends %}
 	$.gritter.add({
-		title: '<br/>Help Tomonotomo be more awesome',
-		text: 'Not finding the right match in your friend of friend network because you do not have a lot of friends on tomonotomo? To expand your reach and possibly find a match, <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" target="_blank">"Invite your Friends"</a> on board',
+		title: '<br/>Help Tomonotomo be more awesome - Invite Friends',
+		text: '<span style="font-size:120%">You do not have enough friends on tomonotomo? To expand your reach and possibly find a match, <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" target="_blank">"Invite your Friends"</a> on board</span>',
 		class_name: 'gritter-light',
-		time: 10000
+		time: 20000
 	});
 	{% endif %}
         {% if notify_hover_on_button %}
         $.gritter.add({
-                title: '<br/>Help Tomonotomo be more awesome',
-                text: 'You are skipping profiles a lot. Having trouble understanding the options? Please hover on the buttons and spend 5 seconds to understand us. Please let us serve you better',
+                title: '<br/>Help Tomonotomo be more awesome - Give us 5 seconds',
+                text: '<span style="font-size:120%">You are skipping profiles a lot. Having trouble understanding the options? Please hover on the buttons and spend 5 seconds to understand us.</span>',
 		class_name: 'gritter-light',
-		time:10000
+		time:20000
         });
         {% endif %}
         {% if notify_welcome %}
         $.gritter.add({
                 title: '<br/>Welcome to Tomonotomo',
-                text: 'Lets get the party started! We are showing you matches from your friend of friend network for a safe and honourable dating experience. If its not intuitive, please hover on the buttons and spend 5 seconds to understand us. Best of Luck!',
+                text: '<span style="font-size:120%">Lets get the party started! We are showing you matches from your friend of friend network for a safe and honourable dating experience. If its not intuitive, please hover on the buttons and spend 5 seconds to understand us. Best Wishes! :)</span>',
                 class_name: 'gritter-light',
-                time:10000
+                time:20000
         });
         {% endif %}
 
