--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -9,6 +9,11 @@
 	width: 70px;
 	height: 70px;
 }
+
+.pad1 > h2 {
+	padding-top:11px!important;
+	margin-bottom:21px!important;
+}
 </style>
 <div class="page1_block">
 	<div class="container_12">
