Relationship Status Fixed

--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -25,7 +25,7 @@
 <script src="{% static 'tomonotomo/js/jquery.kwicks-1.5.1.js' %}" type="text/javascript"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.horizontalNav.js' %}"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.flexslider.js' %}"></script>
-<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.leanModal.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.leanModal.min.js' %}?v=2"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.gritter.js' %}"></script>
 <script>
   $(window).load(function() { 
