Modal width and Minor

--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -29,9 +29,11 @@
 
     #lean_overlay {
 
-        z-index: 11000; left: 50%;
+        z-index: 11000; 
+	left: 15%;
         top: 60px;
-        width: 404px;
+        width: 70%;
+	max-width: 400px;
         padding-bottom: 2px;
         display:none;
         background: #FFF;
