--- a/tomonotomo/templates/tomonotomo/email.html
+++ b/tomonotomo/templates/tomonotomo/email.html
@@ -67,7 +67,7 @@
                                                 <!-- // Begin Module: Top Image with Content \ -->
                                                 <table border="0" cellpadding="20" cellspacing="0" width="100%">
                                                     <tbody><tr mc:repeatable="">
-                                                        <td valign="top" style="text-align: center;border-collapse: collapse;">                                                           <img src="{{ leftimage }}" style="max-width: 260px;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;display: inline;" mc:label="image" mc:edit="tiwc300_image00">
+                                                        <td valign="top" style="text-align: center;border-collapse: collapse;">                                                           <img src="{{ leftimage }}" style="max-width: 260px;width:100%;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;display: inline;" mc:label="image" mc:edit="tiwc300_image00">
                                                             <div mc:edit="tiwc300_content00" style="color: #505050;font-family: Arial;font-size: 14px;line-height: 150%;text-align: left;">
  	                                                           <h4 class="h4" style="color: #202020;display: block;font-family: Arial;font-size: 22px;font-weight: bold;line-height: 100%;margin-top: 0;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: center;"><a href="http://www.tomonotomo.com/profile/tomonotomo/{{ leftid }}" target="_blank" style="color: #336699;font-weight: normal;text-decoration: underline;">{{ lefttitle }}</a></h4>
                                                                	{{ leftcontent }}
@@ -84,7 +84,7 @@
                                                 <table border="0" cellpadding="20" cellspacing="0" width="100%">
                                                     <tbody><tr mc:repeatable="">
                                                         <td valign="top" style="text-align: center;border-collapse: collapse;">
-                                                            <img src="{{ rightimage }}" style="max-width: 260px;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;display: inline;" mc:label="image" mc:edit="tiwc300_image01">
+                                                            <img src="{{ rightimage }}" style="max-width: 260px;width:100%;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;display: inline;" mc:label="image" mc:edit="tiwc300_image01">
                                                             <div mc:edit="tiwc300_content01" style="color: #505050;font-family: Arial;font-size: 14px;line-height: 150%;text-align: left;">
  	                                                           <h4 class="h4" style="color: #202020;display: block;font-family: Arial;font-size: 22px;font-weight: bold;line-height: 100%;margin-top: 0;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: center;"><a href="http://www.tomonotomo.com/profile/tomonotomo/{{ rightid }}" target="_blank" style="color: #336699;font-weight: normal;text-decoration: underline;">{{ righttitle }}</a></h4>
                                                                	{{ rightcontent }}
