Blocking call to tntAction

--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -146,6 +146,7 @@
                                 $("#feedback".concat(({{ doneelement }}).toString())).unbind("click");
                                 $("#feedback".concat(({{ doneelement }}).toString())).removeAttr("href");
                             {% endfor %}
+			   $(".friendbtn").live('click', function() { $(".friendbtn").attr('disabled','disabled')} );
 
                         })
                     </script>
