--- a/tomonotomo/templates/tomonotomo/loggedin.html
+++ b/tomonotomo/templates/tomonotomo/loggedin.html
@@ -12,7 +12,7 @@
 
 			<h2> Building your Social Graph...</h2>
 
-            <div>
+            <div style="font-size:120%">
             <span style="font-size: 150%">"{{ degree1 }}"</span> friends in your network are on tomonotomo<br/><br/>
             {% if degree1|add:"0" > 2 %}
                 You have access to <span style="font-size: 150%">"{{ degree2 }}"</span> friends of friends.<br/><br/>
