--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -145,7 +145,7 @@ mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");</script>
   ga('send', 'pageview');
 
   {% if user.id %}
-	mixpanel.identify('{{ user }}')
+	mixpanel.identify('{{ loggeduserid }}')
   {% endif %}
   mixpanel.track_links('a', 'click on link', {'referrer': document.referrer});
 
