--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -6,7 +6,9 @@
 <title>{% block titlecontent %}tomonotomo - meet friends of friends{% endblock %}</title>
 
 <meta charset="utf-8">
-
+<meta property="fb:admins" content="717323242"/>
+<meta property="fb:app_id" content="1398031667088132"/>
+<meta property="og:type" content="website"/>
 {% include 'meta.html' %}
 
 
