--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -71,7 +71,7 @@ mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");</script>
 	<header>
 		<div class="container_12">
 			<div class="grid_12">
-				<div style="font-size:60px;color:black;float:left;vertical-align:bottom;white-space:nowrap"><a href="/home">tomo no tomo<span style="font-size:20%;color:black"> (alpha) </span></a></div>
+				<div id="heading-tomonotomo" style="font-size:60px;color:black;float:left;vertical-align:bottom;white-space:nowrap"><a href="/home">tomo no tomo<span style="font-size:20%;color:black"> (alpha) </span></a></div>
 				<div class="links">
 					{% if user.id %}
 						<a href="/profile" target="_blank">{{ user.first_name }}</a> - <a href="/logout">Logout</a> - {{ quota }} Quota Points <img style="width:20px;height:20px" src="{% static 'tomonotomo/img/credits.gif' %}"/> 
