--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -228,7 +228,7 @@ $(window).load(function(){
 		time:20000
         });
         {% endif %}
-        {% if notify_welcome %}
+        {% if False %}
         $.gritter.add({
                 title: '<br/>Welcome to Tomonotomo',
                 text: '<span style="font-size:120%">Lets get the party started! We are showing you matches from your friend of friend network for a safe and honourable dating experience. If its not intuitive, please hover on the buttons and spend 5 seconds to understand us. Best Wishes! :)</span>',
