--- a/tomonotomo/templates/tomonotomo/tour.html
+++ b/tomonotomo/templates/tomonotomo/tour.html
@@ -8,6 +8,7 @@
 		color: #000!important;
 		background: #fff!important;
 		background: rgba(255,255,255,0.8)!important;
+		z-index:1000!important;
 		
 	}
 	.joyride-tip-guide h2 {
