--- a/tomonotomo/templates/tomonotomo/tour.html
+++ b/tomonotomo/templates/tomonotomo/tour.html
@@ -7,7 +7,7 @@
 	.joyride-tip-guide {
 		color: #000!important;
 		background: #fff!important;
-		background: rgba(255,255,255,0.8)!important;
+		background: rgba(255,255,255,0.95)!important;
 		z-index:1000!important;
 		
 	}
@@ -42,7 +42,7 @@
 
       <!-- Tour Content -->
     <ol id="joyRideTipContent">
-      <li data-id="heading-tomonotomo" data-text="Give Quick Intro" class="custom" >
+      <li data-id="heading-tomonotomo" data-text="Get Quick Intro" class="custom" >
         <h2>Welcome to Tomonotomo</h2>
         <p>Tomo no tomo means "friends of friends" in Japanese. We present to you a list of friends of friends (FoFs) as potential dates. Its totally safe and secret <3</p>
       </li>
