--- a/tomonotomo/templates/tomonotomo/loggedin.html
+++ b/tomonotomo/templates/tomonotomo/loggedin.html
@@ -30,7 +30,7 @@
 	
 		{% if show_happening|add:"0" > 0 %}
 		<br/><br/>
-		<span style="font-size:120%">People have been talking about you while you were not here ;)<br/> 
+		<span>People have been talking about you while you were not here ;)<br/> 
 			{% if number_new_introductions|add:"0" > 0 %}
 				<br/>{{ number_new_introductions }} friends of friends asked your mutual friends if they could connect to you. 
 			{% endif %}
@@ -38,7 +38,7 @@
 				<br/>{{ number_new_connect_directly }} friends of friends connected with you directly and you would have got the emails.
 			{% endif %}
 			{% if number_new_admire|add:"0" > 0 %}
-				<br/>{{ number_new_admire }} friends of friends admire you and are waiting for you to discover them :)
+				<br/>{{ number_new_admire }} friends of friends admired you and are waiting for you to discover them :)
 			{% endif %}
 		<br/>Have fun :)
 		</span>
