--- a/tomonotomo/templates/tomonotomo/nomatchforyou.html
+++ b/tomonotomo/templates/tomonotomo/nomatchforyou.html
@@ -15,7 +15,8 @@
 
             <div>
                 <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" class="btn btn-large"><h3 style="color:white">Invite Friends</h3></a><br/><br/>
-		<a href="{% url "index" %}" class="btn btn-large"><h3 style="color:white">Go to Home Page</h3></a>
+		<a href="{% url "index" %}" class="btn btn-large"><h3 style="color:white">Go to Home Page</h3></a><br/><br/>
+		<a href="http://www.tomonotomo.com/fof" class="btn btn-large"><h3 style="color:white">Check again for a date</h3></a>
 			</div>
             <br/>
 
