--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -84,6 +84,12 @@
 			</div>
 
 			<br/>
+			{% if secretadmirers %}
+			<div style="text-align:center">
+				{{ secretadmirers }} secret admirers <img style="width:16px;height:16px" src="{% static 'tomonotomo/img/svgimages/tomonotomo3.png' %}" alt="" />
+			</div>
+			<br/>
+			{% endif %}
 		</div>
 
 		<div class="grid_8">
