--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -214,6 +214,12 @@
 
 	</div>
 </div>
+
+	<div class="container_12" style="text-align:center;max-width:70%">
+		<span style="text-wrap:normal;word-wrap:normal;">
+		{{ lovequote }} #tomonotomo @tomonotomo_date
+		</span>
+	</div>
 </div>
 
 <script type="text/javascript">
