--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -217,7 +217,7 @@
 
 	<div class="container_12" style="text-align:center;max-width:70%">
 		<span style="text-wrap:normal;word-wrap:normal;">
-		{{ lovequote }} #tomonotomo @tomonotomo_date
+		{{ lovequote }} <br/> #tomonotomo @tomonotomo_date
 		</span>
 	</div>
 </div>
