--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -102,7 +102,7 @@
 
 			<div class="container_12">
 				<div class="grid_4" style="text-align:center">
-                        {% if user.id %}
+                        {% if request.user.id %}
 				{% if show_button %}
 					<div>
 					<a rel="leanModal" name="lean_overlay" href="#lean_overlay" id="feedback1" class="btn friendbtn" title="Sends an email to a friend you choose requesting for an introduction to {{ fullname }}">
