--- a/tomonotomo/templates/tomonotomo/personalprofile.html
+++ b/tomonotomo/templates/tomonotomo/personalprofile.html
@@ -62,6 +62,13 @@
     </div>
 </div>
 
+{% if secretadmirers %}
+	<div class="container_12">
+	<div class="block">
+	<span> {{ secretadmirers }} secret admirers ;)</span>
+	</div>
+	</div>
+{% endif %}
 
 {% if connectfriendslist %}
         <div class="container_12">
