--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -217,7 +217,9 @@
 
 	<div class="container_12" style="text-align:center;max-width:70%">
 		<span style="text-wrap:normal;word-wrap:normal;">
-		{{ lovequote }} <br/> #tomonotomo @tomonotomo_date
+		{{ lovequote }} &nbsp;&nbsp; 
+		<a href="https://twitter.com/share" data-text="{{ lovequote }}" class="twitter-share-button" data-lang="en" data-count="none" data-dnt="true" data-url="none" data-related="tomonotomo_date" data-via="tomonotomo_date">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</span>
 	</div>
 </div>
