--- a/tomonotomo/templates/tomonotomo/about.html
+++ b/tomonotomo/templates/tomonotomo/about.html
@@ -32,7 +32,21 @@
 				<li>Not another dating account - We get the friend information from facebook and build our database to help you, you discover on tomonotomo and then all further communication happens on email or phone or in person, where it should happen</li>
                         </ul>
 			<br/>
-			Do let us know if we helped you start your relationship. :)
+			Do let us know if we helped you start your relationship. :) While you are here, please like us on <a href="https://www.facebook.com/tomonotomo" target="_blank">fb</a> and follow us on <a href="https://twitter.com/tomonotomo_date" target="_blank">twitter</a>
+			<br/><br/>
+			<div id="fb-root"></div>
+			<script>(function(d, s, id) {
+			  var js, fjs = d.getElementsByTagName(s)[0];
+			  if (d.getElementById(id)) return;
+			  js = d.createElement(s); js.id = id;
+			  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1398031667088132";
+			  fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));</script>
+			<div class="fb-like" data-href="https://www.facebook.com/tomonotomo" data-layout="standard" data-action="like" data-show-faces="true" data-share="false"></div>
+			<br/><br/>
+			<a href="https://twitter.com/tomonotomo_date" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @tomonotomo_date</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
 
 		</div>
 
