--- a/tomonotomo/templates/tomonotomo/tour.html
+++ b/tomonotomo/templates/tomonotomo/tour.html
@@ -23,9 +23,12 @@
 		border-color:rgba(255,255,255,0.8)!important;
 	}
 	.joyride-next-tip {
-		  border: solid 1px #3c2e52!important;
-		  background: rgb(0,99,255)!important;
-		  background: -moz-linear-gradient(top, #3c2e52, 0%, #3c2e52 100%)!important;
+		  border: none!important;
+		  text-shadow: none!important;
+		  -webkit-box-shadow: none!important;
+		  box-shadow: none!important;
+		  background: #3c2e52!important;
+		  background: -moz-linear-gradient(top, #3c2e52 0%, #3c2e52 100%)!important;
 		  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3c2e52), color-stop(100%,#3c2e52))!important;
 		  background: -webkit-linear-gradient(top, #3c2e52 0%,#3c2e52 100%)!important;
 		  background: -o-linear-gradient(top, #3c2e52 0%,#3c2e52 100%)!important;
@@ -33,8 +36,32 @@
 		  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3c2e52', endColorstr='#3c2e52',GradientType=0 )!important;
 		  background: linear-gradient(top, #3c2e52 0%,#3c2e52 100%)!important;
 	}
+
+	.joyride-next-tip:hover {
+                  border: none!important;
+                  text-shadow: none!important;
+                  -webkit-box-shadow: none!important;
+                  box-shadow: none!important;
+                  background: #eb7e8d!important;
+                  background: -moz-linear-gradient(top, #eb7e8d 0%, #eb7e8d 100%)!important;
+                  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eb7e8d), color-stop(100%,#eb7e8d))!important;
+                  background: -webkit-linear-gradient(top, #eb7e8d 0%,#eb7e8d 100%)!important;
+                  background: -o-linear-gradient(top, #eb7e8d 0%,#eb7e8d 100%)!important;
+                  background: -ms-linear-gradient(top, #eb7e8d 0%,#eb7e8d 100%)!important;
+                  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eb7e8d', endColorstr='#eb7e8d',GradientType=0 )!important;
+                  background: linear-gradient(top, #eb7e8d 0%,#eb7e8d 100%)!important;
+	}
+
 	.joyride-expose-wrapper {
 		display: none
+	}
+
+	.joyride-close-tip {
+		color: #000!important;
+	}
+
+	.joyride-close-tip:hover {
+		color: #000!important;
 	}
 	
 
