Name not readable hack removed

--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -3,7 +3,7 @@
 
 <html xmlns:fb="http://ogp.me/ns/fb#" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>{% block titlecontent %}tomonotomo - meet friends of friends{% endblock %}</title>
+<title>tomonotomo - meet friends of friends</title>
 
 <meta charset="utf-8">
 <meta property="fb:admins" content="717323242"/>
