--- a/tomonotomo/templates/tomonotomo/dbsummary.html
+++ b/tomonotomo/templates/tomonotomo/dbsummary.html
@@ -37,9 +37,9 @@
                 {% for dbuser in dbsummary_quota %}
                         <a href="http://www.tomonotomo.com/profile/{{ dbuser.userid }}" target="_blank">{{ dbuser.userid }}</a> - {{ dbuser.quota }}<br/>
                 {% endfor %}
-            <br/>Quota from UserFeedback: ({{ dbsummary_quota_verification | length }})<br/>
+            <br/>No. of UserFeedback Submitted (Verify Quota): ({{ dbsummary_quota_verification | length }})<br/>
                 {% for dbuser in dbsummary_quota_verification %}
-                        <a href="http://www.tomonotomo.com/profile/{{ dbuser.userid }}" target="_blank">{{ dbuser.userid }}</a> - {{ dbuser.fbid__count|add:"-30" }}<br/>
+                        <a href="http://www.tomonotomo.com/profile/{{ dbuser.userid }}" target="_blank">{{ dbuser.userid }}</a> - {{ dbuser.fbid__count }}<br/>
                 {% endfor %}
 	    <br/>DB Checks:<br/>
 		{{ dbsummary_dbchecksstring | linebreaksbr }}
