FB Like and Twitter Follow on random pages

--- a/tomonotomo/templates/tomonotomo/nomatchforyou.html
+++ b/tomonotomo/templates/tomonotomo/nomatchforyou.html
@@ -17,6 +17,23 @@
                 <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" class="btn btn-large"><h3 style="color:white">Invite Friends</h3></a><br/><br/>
 		<a href="{% url "index" %}" class="btn btn-large"><h3 style="color:white">Go to Home Page</h3></a><br/><br/>
 		<a href="http://www.tomonotomo.com/fof" class="btn btn-large"><h3 style="color:white">Check again for a date</h3></a>
+		<br/><br/><br/><br/>	
+		While you are here, please like us on <a href="https://www.facebook.com/tomonotomo" target="_blank">fb</a> and follow us on <a href="https://twitter.com/tomonotomo_date" target="_blank">twitter</a>
+                        <br/><br/>
+                        <div id="fb-root"></div>
+                        <script>(function(d, s, id) {
+                          var js, fjs = d.getElementsByTagName(s)[0];
+                          if (d.getElementById(id)) return;
+                          js = d.createElement(s); js.id = id;
+                          js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1398031667088132";
+                          fjs.parentNode.insertBefore(js, fjs);
+                        }(document, 'script', 'facebook-jssdk'));</script>
+                        <div class="fb-like" data-href="https://www.facebook.com/tomonotomo" data-layout="standard" data-action="like" data-show-faces="true" data-share="false"></div>
+                        <br/><br/>
+                        <a href="https://twitter.com/tomonotomo_date" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @tomonotomo_date</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
 			</div>
             <br/>
 
