--- a/tomonotomo/templates/tomonotomo/quotaover.html
+++ b/tomonotomo/templates/tomonotomo/quotaover.html
@@ -31,6 +31,21 @@
 	    </div>
             <br/>
 
+			<br/><br/><br/><br/>
+                        <div id="fb-root"></div>
+                        <script>(function(d, s, id) {
+                          var js, fjs = d.getElementsByTagName(s)[0];
+                          if (d.getElementById(id)) return;
+                          js = d.createElement(s); js.id = id;
+                          js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1398031667088132";
+                          fjs.parentNode.insertBefore(js, fjs);
+                        }(document, 'script', 'facebook-jssdk'));</script>
+                        <div class="fb-like" data-href="https://www.facebook.com/tomonotomo" data-layout="standard" data-action="like" data-show-faces="true" data-share="false"></div>
+                        <br/><br/>
+                        <a href="https://twitter.com/tomonotomo_date" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @tomonotomo_date</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
 		</div>
 
 	</div>
