--- a/tomonotomo/templates/tomonotomo/nomatchforyou.html
+++ b/tomonotomo/templates/tomonotomo/nomatchforyou.html
@@ -11,7 +11,7 @@
 		<div class="grid_6">
 
 			<h2> Sorry! We do not have a match for you! </h2>
-			<h3 style="font-size:120%"> We could not find even one single person in your friend of friend network, who we think is a match for you. If you invite your friends, may be we will be able to do a better job. Please invite your friends.</h3><br/>
+			<h3 style="font-size:120%"> We could not find even one single person in your friend of friend network, who we think is a match for you, based on your age, location and interests. If you invite your friends, may be we will be able to do a better job. Please invite your friends. Else, sit tight and come back in a couple of days :)</h3><br/>
 
             <div>
                 <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" class="btn btn-large"><h3 style="color:white">Invite Friends</h3></a><br/><br/>
