Faster RandFoF and Minor

--- a/tomonotomo/templates/tomonotomo/nomatchforyou.html
+++ b/tomonotomo/templates/tomonotomo/nomatchforyou.html
@@ -10,7 +10,7 @@
         </div>
 		<div class="grid_6">
 
-			<h2> Sorry! We do not have a match for you! </h2>
+			<h2> Sorry! We do not have a match for you today! </h2>
 			<h3 style="font-size:120%"> We could not find even one single person in your friend of friend network, who we think is a match for you, based on your age, location and interests. If you invite your friends, may be we will be able to do a better job. Please invite your friends. Else, sit tight and come back in a couple of days :)</h3><br/>
 
             <div>
