--- a/tomonotomo/templates/tomonotomo/nomatchforyou.html
+++ b/tomonotomo/templates/tomonotomo/nomatchforyou.html
@@ -11,10 +11,10 @@
 		<div class="grid_6">
 
 			<h2> Sorry! We do not have a match for you today! </h2>
-			<h3 style="font-size:120%"> We could not find even one single person in your friend of friend network, who we think is a match for you, based on your age, location and interests. If you invite your friends, may be we will be able to do a better job. Please invite your friends. Else, sit tight and come back in a couple of days :)</h3><br/>
+			<h3 style="font-size:120%"> We could not find even one single person in your friend of friend network, who we think is a match for you, based on your age, location and interests. If you invite your friends, may be we will be able to do a better job. Please invite your friends, preferably of your city. Else, sit tight and come back in a couple of days :)</h3><br/>
 
             <div>
-                <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" class="btn btn-large"><h3 style="color:white">Invite Friends</h3></a><br/><br/>
+                <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" class="btn btn-large"><h3 style="color:white">Invite a friend to get more potential matches</h3></a><br/><br/>
 		<a href="{% url "index" %}" class="btn btn-large"><h3 style="color:white">Go to Home Page</h3></a><br/><br/>
 		<a href="http://www.tomonotomo.com/fof" class="btn btn-large"><h3 style="color:white">Check again for a date</h3></a>
 		<br/><br/><br/><br/>	
