--- a/tomonotomo/templates/tomonotomo/quotaover.html
+++ b/tomonotomo/templates/tomonotomo/quotaover.html
@@ -14,9 +14,9 @@
 
             <div>
 
-		<span style="font-size:150%">To unlock 30 more profiles for the day, either invite 1 friend or pay $2 via paypal</span><br/><br/><br/>
+		<span style="font-size:150%">To unlock 30 more profiles for the day right away, either invite 1 friend or pay $2 via paypal</span><br/><br/><br/>
                 
-		<a id="quotaoverinvite" href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com/quotaincrease" class="btn btn-large"><h3 style="color:white">Let me invite a friend</h3></a>
+		<a id="quotaoverinvite" href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com/quotaincrease" class="btn btn-large"><h3 style="color:white">Invite a friend right now</h3></a>
                 
 		<br/><br/>
 		&nbsp;&nbsp;&nbsp; OR &nbsp;&nbsp;&nbsp;
